--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ stages:
       - npm
 
     variables:
-      wwwrootDir: 'Tailspin.SpaceGame.Web/wwwroot'
+      wwwrootDir: 'ADO.UseCase.YAML.MultiStage/wwwroot'
       dotnetSdkVersion: '8.x'
 
     steps:
